--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,82 @@
-.logo {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto+Condensed:wght@400;700&display=swap");
+.header {
+  background: #fff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 120px 1fr 1fr 240px;
+      grid-template-columns: 120px 1fr 1fr 240px;
+  justify-items: center;
+  height: 120px;
+}
+
+.logo-link {
   width: 100px;
+  margin: auto;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.logo {
+  width: 100%;
+}
+
+.char-img {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+}
+
+.char-img img {
+  height: 120px;
+  padding: 1.2em 1em;
+}
+
+.header-info {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 0.5em;
+}
+
+.header-info__icon {
+  width: 24px;
+}
+
+.header-info__icon--lower {
+  -webkit-transform: translateY(25%);
+          transform: translateY(25%);
+}
+
+.header-info__email {
+  color: #303030;
+  margin: 0.5em;
+}
+
+.header-info__email:hover, .header-info__email:focus {
+  color: #ff8000;
+}
+
+.header-info__address {
+  margin: 0.5em;
+  display: inline-block;
+}
+
+.header-info__search {
+  margin: 0.5em;
+  width: 182px;
+  -webkit-transform: translateY(-30%);
+          transform: translateY(-30%);
 }
 
 html {
@@ -14,13 +91,15 @@ html {
 
 body {
   margin: 0;
+  font-family: "Open Sans", sans-serif;
+  color: #303030;
 }
 
-.app {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url(/images/skolka-uvnitr-2.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/skolka-uvnitr-2.jpg);
+.container {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url(/images/skolka-venku.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/skolka-venku.jpg);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: right top;
   background-size: cover;
   height: 100vh;
 }
