correction of header images, basic navbar

--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -1,3 +1,25 @@
 <nav class="nav">
-
+  <ul class="navbar">
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Aktuality</a>
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">O škole</a> <!-- při mouseenter se zobrazí podnabídka; tenhle link buď nikam nepovede nebo povede na první položku z podnabídky -->
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Zápis</a>
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Jídelníček</a>
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Třídy</a> <!-- při mouseenter se zobrazí podnabídka; tenhle link buď nikam nepovede nebo povede na první položku z podnabídky -->
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Panorama</a>
+    </li>
+    <li class="navbar__item">
+      <a class="navbar__link" href="#">Kontakty</a>
+    </li>
+  </ul>
 </nav>
