--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -11,27 +11,23 @@
   <div id="app" class="container">
     <header class="header">
       <a class="logo-link" href="/index.html">
-        <img class="logo" src="/images/logo.gif" alt="logo">
+        <img class="logo" src="/images/logo.png" alt="logo">
       </a>
       <div class="char-img">
         <img class="char-img--krtecek" src="/images/krtecek.png" alt="krteček">
-        <img class="char-img--cvrcek" src="/images/cvrcek.jpg" alt="cvrček">
+        <img class="char-img--cvrcek" src="/images/cvrcek.png" alt="cvrček">
         <img class="char-img--rakosnicek" src="/images/rakosnicek.gif" alt="rákosníček">
         <img class="char-img--makova-panenka" src="/images/makova-panenka.jpg" alt="maková panenka">
         <img class="char-img--broucek" src="/images/broucci.png" alt="brouček">
       </div>
       <div class="header-info">
         <div>
-          <img class="header-info__icon header-info__icon--lower" src="/images/email.svg">
+          <img class="header-info__icon" src="/images/email.svg">
           <a class="header-info__email" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
         </div>
         <div>
-          <img class="header-info__icon header-info__icon--lower" src="/images/address.svg">
-          <p class="header-info__address">Parmská 388, Praha 10</p>
-        </div>
-        <div>
-          <img class="header-info__icon" src="/images/search.png">
-          <input class="header-info__search" type="text" name="" id="">
+          <img class="header-info__icon" src="/images/address.svg">
+          <p class="header-info__address">Parmská 388, Praha 10</p> <!-- při kliknutí modal okno s mapou? + cursor: pointer -->
         </div>
       </div>
     </header>
