--- a/css/_header.scss
+++ b/css/_header.scss
@@ -18,10 +18,13 @@
 
 .char-img {
   grid-column: 2 / 4;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   
   img {
-    height: 120px;
-    padding: 1.2em 1em;
+    height: 88px;
   }
 }
 
@@ -29,16 +32,12 @@
   grid-column: 4 / 5;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 0.5em;
+  justify-content: space-evenly;
 
   &__icon {
     width: 24px;
-    // šlo by přebarvit svg loga na primární barvu?
-  }
-
-  &__icon--lower {
     transform: translateY(25%);
+    // šlo by přebarvit svg loga na primární barvu?
   }
 
   &__email {
@@ -52,13 +51,7 @@
   }
 
   &__address {
-    margin: 0.5em;
     display: inline-block;
-  }
-
-  &__search {
     margin: 0.5em;
-    width: 182px;
-    transform: translateY(-30%);
   }
 }
