--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,7 +1,8 @@
-$color-primary: rgb(255, 152, 51);
+$color-primary: hsl(30, 100%, 60%);
 $color-primary-light: hsl(30, 100%, 80%);
 $color-primary-dark: hsl(30, 100%, 50%);
-$color-dark: rgb(48, 48, 48);
+$color-dark: hsl(0, 0%, 20%);
+$color-light: hsl(0, 0%, 90%);
 
 $font-headings: 'Roboto Condensed', sans-serif;
 $font-text: 'Open Sans', sans-serif;
