--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,20 @@
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2 / 4;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .char-img img {
-  height: 120px;
-  padding: 1.2em 1em;
+  height: 88px;
 }
 
 .header-info {
@@ -43,23 +52,19 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0 0.5em;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .header-info__icon {
   width: 24px;
-}
-
-.header-info__icon--lower {
   -webkit-transform: translateY(25%);
           transform: translateY(25%);
 }
 
 .header-info__email {
-  color: #303030;
+  color: #333333;
   margin: 0.5em;
 }
 
@@ -68,15 +73,42 @@
 }
 
 .header-info__address {
-  margin: 0.5em;
   display: inline-block;
+  margin: 0.5em;
 }
 
-.header-info__search {
-  margin: 0.5em;
-  width: 182px;
-  -webkit-transform: translateY(-30%);
-          transform: translateY(-30%);
+.nav {
+  position: -webkit-sticky;
+  /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+.navbar {
+  background-color: #ff9933;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.navbar__link {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  color: #e6e6e6;
+  padding: 1em 2em;
+}
+
+.navbar__link:hover {
+  background-color: #ff8000;
 }
 
 html {
@@ -92,7 +124,7 @@ html {
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
-  color: #303030;
+  color: #333333;
 }
 
 .container {
@@ -101,6 +133,6 @@ body {
   background-repeat: no-repeat;
   background-position: right top;
   background-size: cover;
-  height: 100vh;
+  height: 200vh;
 }
 /*# sourceMappingURL=styles.css.map */
