navbar with dropdowns on hover

--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -14,20 +14,20 @@
         <img class="logo" src="/images/logo.png" alt="logo">
       </a>
       <div class="char-img">
-        <img class="char-img--krtecek" src="/images/krtecek.png" alt="krteček">
-        <img class="char-img--cvrcek" src="/images/cvrcek.png" alt="cvrček">
-        <img class="char-img--rakosnicek" src="/images/rakosnicek.gif" alt="rákosníček">
-        <img class="char-img--makova-panenka" src="/images/makova-panenka.jpg" alt="maková panenka">
-        <img class="char-img--broucek" src="/images/broucci.png" alt="brouček">
+        <img src="/images/krtecek.png" alt="krteček">
+        <img src="/images/cvrcek.png" alt="cvrček">
+        <img src="/images/rakosnicek.gif" alt="rákosníček">
+        <img src="/images/makova-panenka.jpg" alt="maková panenka">
+        <img src="/images/broucci.png" alt="brouček">
       </div>
-      <div class="header-info">
+      <div class="contact-details">
         <div>
-          <img class="header-info__icon" src="/images/email.svg">
-          <a class="header-info__email" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
+          <img class="contact-details__icon" src="/images/email.svg">
+          <a class="contact-details__email" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
         </div>
         <div>
-          <img class="header-info__icon" src="/images/address.svg">
-          <p class="header-info__address">Parmská 388, Praha 10</p> <!-- při kliknutí modal okno s mapou? + cursor: pointer -->
+          <img class="contact-details__icon" src="/images/address.svg">
+          <p class="contact-details__address">Parmská 388, Praha 10</p> <!-- při kliknutí modal okno s mapou? + cursor: pointer -->
         </div>
       </div>
     </header>
