--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -2,5 +2,8 @@
       <small class="copyright">&copy; 2021 RuzeMeziTrny</small>
     </footer>
   </div>
+
+  <script src="/js/index.js"></script>
+
 </body>
 </html>
