--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,10 +1,10 @@
-.nav {
+nav {
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
 }
 
-.navbar {
+.nav {
   background-color: $color-primary;
   margin: 0;
   padding: 0;
@@ -25,4 +25,34 @@
       background-color: $color-primary-dark;
     }
   }
+}
+
+.sub-nav {
+  background-color: $color-primary;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  position: absolute;
+
+  &__link {
+    display: inline-block;
+    text-decoration: none;
+    font-family: $font-headings;
+    font-weight: 400;
+    color: $color-light;
+    width: 100%;
+    padding: 0.75em 2em;
+  
+    &:hover {
+      background-color: $color-primary-dark;
+    }
+  }
+}
+
+.dn {
+  display: none;
+}
+
+.nav__item:hover .sub-nav {
+  display: block;
 }
