--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
   height: 88px;
 }
 
-.header-info {
+.contact-details {
   -ms-grid-column: 4;
   -ms-grid-column-span: 1;
   grid-column: 4 / 5;
@@ -57,34 +57,34 @@
           justify-content: space-evenly;
 }
 
-.header-info__icon {
+.contact-details__icon {
   width: 24px;
   -webkit-transform: translateY(25%);
           transform: translateY(25%);
 }
 
-.header-info__email {
+.contact-details__email {
   color: #333333;
   margin: 0.5em;
 }
 
-.header-info__email:hover, .header-info__email:focus {
+.contact-details__email:hover, .contact-details__email:focus {
   color: #ff8000;
 }
 
-.header-info__address {
+.contact-details__address {
   display: inline-block;
   margin: 0.5em;
 }
 
-.nav {
+nav {
   position: -webkit-sticky;
   /* Safari */
   position: sticky;
   top: 0;
 }
 
-.navbar {
+.nav {
   background-color: #ff9933;
   margin: 0;
   padding: 0;
@@ -97,7 +97,7 @@
           justify-content: center;
 }
 
-.navbar__link {
+.nav__link {
   display: inline-block;
   text-decoration: none;
   text-transform: uppercase;
@@ -107,8 +107,48 @@
   padding: 1em 2em;
 }
 
-.navbar__link:hover {
+.nav__link:hover {
   background-color: #ff8000;
+}
+
+.sub-nav {
+  background-color: #ff9933;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  position: absolute;
+}
+
+.sub-nav__link {
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  color: #e6e6e6;
+  width: 100%;
+  padding: 0.75em 2em;
+}
+
+.sub-nav__link:hover {
+  background-color: #ff8000;
+}
+
+.dn {
+  display: none;
+}
+
+.nav__item:hover .sub-nav {
+  display: block;
+}
+
+.footer {
+  background-color: #ff9933;
+}
+
+.copyright {
+  color: #e6e6e6;
+  display: block;
+  text-align: center;
 }
 
 html {
