--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,9 +1,19 @@
 {% include "partials/header.njk" %}
 {% include "partials/nav.njk" %}
 
-<main class="main">
+<main class="main main--home">
 
-  {{ content | safe }} 
+  <section class="about-us">
+    <img class="about-us__image about-us__image--right" src="/images/skolka-brana.png" alt="vchod do MŠ">
+    <p>Naše MŠ Parmská 388 má bílé obložení, červenobílý plot a na všech dveřích obrázky pohádkových postaviček: Broučci, Cvrček, Krteček, Maková panenka a Rákosníček.</p>
+    <p>Jsme pětitřídní mateřská škola rodinného typu, která má pět oddělení. Rodiče se na nás mohou vždy obrátit s jakoukoli žádostí nebo přáním. Provoz naší mateřské školy je od 6:30 do 17:00 hodin. Třída Broučci je nově také celodenní. Dítě je k nám možno přivést během celého dne. Příjem nových dětí probíhá v průběhu celého školního roku, pokud je volná kapacita, která nyní představuje 130 míst.</p>
+    <img class="about-us__image about-us__image--left" src="/images/skolka-akce1.png" alt="děti tančí s klauny">
+    <h2>O co se snažíme?</h2>
+    <p>Šťastné dítě a spokojený rodič, to je náš cíl. Společně s Vámi budujeme atmosféru plnou porozumění, citu a přátelství, které je nutné mezi dítětem, učitelem a rodičem.</p>
+  </section>
+
+  <!-- tam, kde se bude vkládat proměnlivý obsah, dát --> 
+  {{ content | safe }}
 
 </main>
 
