--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,39 @@ nav {
   display: block;
 }
 
+.main {
+  background-color: #fff;
+  width: 80%;
+  margin: auto;
+  padding: 2em;
+  text-align: justify;
+}
+
+.main--home {
+  height: 70vh;
+}
+
+.about-us {
+  line-height: 1.5;
+}
+
+.about-us__image {
+  width: 20%;
+  border-radius: 4%;
+  -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+}
+
+.about-us__image--right {
+  float: right;
+  margin: 0 0 2em 2em;
+}
+
+.about-us__image--left {
+  float: left;
+  margin: 0 2em 2em 0;
+}
+
 .footer {
   background-color: #ff9933;
 }
@@ -149,6 +182,7 @@ nav {
   color: #e6e6e6;
   display: block;
   text-align: center;
+  padding: 1em;
 }
 
 html {
@@ -171,8 +205,8 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url(/images/skolka-venku.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/skolka-venku.jpg);
   background-repeat: no-repeat;
-  background-position: right top;
+  background-position: right center;
   background-size: cover;
-  height: 200vh;
+  min-height: 100vh;
 }
 /*# sourceMappingURL=styles.css.map */
