main page update

--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -24,7 +24,7 @@
     </li>
     <li><a class="nav__link" href="#">Jídelníček</a></li>
     <li class="nav__item">
-      <a class="nav__link" id="nav__link--classes" href="#">Třídy</a> <!-- tenhle link povede na přehled tříd (Horolezecká) -->
+      <a class="nav__link" id="nav__link--classes" href="#">Třídy</a> <!-- tenhle link povede na přehled tříd (viz Horolezecká) -->
       <ul class="sub-nav dn" id="sub-nav--classes">
         <li><a href="#" class="sub-nav__link">Broučci</a></li>
         <li><a href="#" class="sub-nav__link">Cvrček</a></li>
