--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -13,12 +13,12 @@
       <a class="logo-link" href="/index.html">
         <img class="logo" src="/images/logo.png" alt="logo">
       </a>
-      <div class="char-img">
-        <img src="/images/krtecek.png" alt="krteček">
-        <img src="/images/cvrcek.png" alt="cvrček">
-        <img src="/images/rakosnicek.gif" alt="rákosníček">
-        <img src="/images/makova-panenka.jpg" alt="maková panenka">
-        <img src="/images/broucci.png" alt="brouček">
+      <div class="char-img"> <!-- obrázky povedou na podstránku jednotlivých tříd -->
+        <a href="#"><img src="/images/krtecek.png" alt="krteček"></a>
+        <a href="#"><img src="/images/cvrcek.png" alt="cvrček"></a>
+        <a href="#"><img src="/images/rakosnicek.gif" alt="rákosníček"></a>
+        <a href="#"><img src="/images/makova-panenka.jpg" alt="maková panenka"></a>
+        <a href="#"><img src="/images/broucci.png" alt="brouček"></a>
       </div>
       <div class="contact-details">
         <div>
@@ -27,7 +27,8 @@
         </div>
         <div>
           <img class="contact-details__icon" src="/images/address.svg">
-          <p class="contact-details__address">Parmská 388, Praha 10</p> <!-- při kliknutí modal okno s mapou? + cursor: pointer -->
+          <p class="contact-details__address">Parmská 388, Praha 10</p> 
+          <!-- při kliknutí na adresu modal okno s mapou? + cursor: pointer -->
         </div>
       </div>
     </header>
