--- a/css/_main-page.scss
+++ b/css/_main-page.scss
@@ -1,31 +1,65 @@
 .main {
+  padding: 1em 2em;
   background-color: #fff;
-  width: 80%; // nebo 100% bez spodního obrázku?
-  margin: auto;
-  padding: 2em;
   text-align: justify;
+  line-height: 1.5;
 
   &--home {
-    height: 70vh;
+    min-height: 70vh;
   }
-}
-
-.about-us {
-  line-height: 1.5;
 }
 
 .about-us__image {
+  float: right;
   width: 20%;
+  margin-left: 1em;
   border-radius: 4%;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+}
 
-  &--right {
-    float: right;
-    margin: 0 0 2em 2em;
+h2 {
+  font-family: $font-headings;
+  color: $color-primary;
+  text-align: center;
+}
+
+.news-meal {
+  display: flex;
+  padding-top: 2em;
+
+  section {
+    flex-basis: 50%;
+    display: grid;
+    grid-template-columns: 24px repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr );
+    grid-gap: 0.5em;
+    justify-items: center;
   }
 
-  &--left {
-    float: left;
-    margin: 0 2em 2em 0;
+  &__icon-link {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  
+  &__icon {
+    width: 24px;
+  }
+
+  &__heading {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+    justify-self: start;
+    margin: 0;
+  }
+
+  &__link {
+    grid-column: 1 / 5;
+    grid-row: 3 / 4;
+    color: $color-primary;
+    font-weight: 600;
+
+    &:hover {
+      color: $color-primary-dark;
+    }
   }
 }
