--- a/css/styles.css
+++ b/css/styles.css
@@ -142,36 +142,89 @@ nav {
 }
 
 .main {
+  padding: 1em 2em;
   background-color: #fff;
-  width: 80%;
-  margin: auto;
-  padding: 2em;
   text-align: justify;
-}
-
-.main--home {
-  height: 70vh;
-}
-
-.about-us {
   line-height: 1.5;
 }
 
+.main--home {
+  min-height: 70vh;
+}
+
 .about-us__image {
+  float: right;
   width: 20%;
+  margin-left: 1em;
   border-radius: 4%;
   -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
-.about-us__image--right {
-  float: right;
-  margin: 0 0 2em 2em;
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  color: #ff9933;
+  text-align: center;
 }
 
-.about-us__image--left {
-  float: left;
-  margin: 0 2em 2em 0;
+.news-meal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 2em;
+}
+
+.news-meal section {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 24px (1fr)[3];
+      grid-template-columns: 24px repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  grid-gap: 0.5em;
+  justify-items: center;
+}
+
+.news-meal__icon-link {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+.news-meal__icon {
+  width: 24px;
+}
+
+.news-meal__heading {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-column: 2 / 5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  margin: 0;
+}
+
+.news-meal__link {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  color: #ff9933;
+  font-weight: 600;
+}
+
+.news-meal__link:hover {
+  color: #ff8000;
 }
 
 .footer {
@@ -199,14 +252,5 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
   color: #333333;
-}
-
-.container {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url(/images/skolka-venku.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/skolka-venku.jpg);
-  background-repeat: no-repeat;
-  background-position: right center;
-  background-size: cover;
-  min-height: 100vh;
 }
 /*# sourceMappingURL=styles.css.map */
