--- a/css/_main-page.scss
+++ b/css/_main-page.scss
@@ -1,6 +1,5 @@
 .main {
   padding: 1em 2em;
-  background-color: #fff;
   text-align: justify;
   line-height: 1.5;
 
@@ -34,6 +33,7 @@ h2 {
     grid-template-rows: repeat(3, 1fr );
     grid-gap: 0.5em;
     justify-items: center;
+    align-items: center;
   }
 
   &__icon-link {
