concept and interests sections

--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -2,35 +2,35 @@
   <ul class="nav">
     <li><a class="nav__link" href="#">Aktuality</a></li>
     <li class="nav__item">
-      <a class="nav__link" id="nav__link--kindergarten" href="#">O školce</a> <!-- tenhle link povede na 1. položku z podnabídky -->
+      <a class="nav__link" id="nav__link--kindergarten" href="/o-skolce/koncepce">O školce</a>
       <ul class="sub-nav dn" id="sub-nav--kindergarten">
-        <li><a href="#" class="sub-nav__link">Koncepce školky</a></li>
-        <li><a href="#" class="sub-nav__link">Zájmové zaměření</a></li>
-        <li><a href="#" class="sub-nav__link">Jak to u nás vypadá</a></li>
-        <li><a href="#" class="sub-nav__link">Režim dne</a></li>
-        <li><a href="#" class="sub-nav__link">Školní vzdělávací program</a></li>
-        <li><a href="#" class="sub-nav__link">Úřední dokumenty</a></li>
+        <li><a class="sub-nav__link" href="/o-skolce/koncepce">Koncepce školky</a></li>
+        <li><a class="sub-nav__link" href="/o-skolce/zajmy">Zájmové zaměření</a></li>
+        <li><a class="sub-nav__link" href="#">Jak to u nás vypadá</a></li>
+        <li><a class="sub-nav__link" href="#">Režim dne</a></li>
+        <li><a class="sub-nav__link" href="#">Školní vzdělávací program</a></li>
+        <li><a class="sub-nav__link" href="#">Úřední dokumenty</a></li>
       </ul>
     </li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--parents" href="#">Pro rodiče</a> <!-- tenhle link povede na 1. položku z podnabídky -->
       <ul class="sub-nav dn" id="sub-nav--parents">
-        <li><a href="#" class="sub-nav__link">Zápis</a></li>
-        <li><a href="#" class="sub-nav__link">Oblečení do MŠ</a></li>
-        <li><a href="#" class="sub-nav__link">Rady rodičům</a></li>
-        <li><a href="#" class="sub-nav__link">Akce pro rodiče</a></li>
-        <li><a href="#" class="sub-nav__link">Platby</a></li>
+        <li><a class="sub-nav__link" href="#">Zápis</a></li>
+        <li><a class="sub-nav__link" href="#">Oblečení do MŠ</a></li>
+        <li><a class="sub-nav__link" href="#">Rady rodičům</a></li>
+        <li><a class="sub-nav__link" href="#">Akce pro rodiče</a></li>
+        <li><a class="sub-nav__link" href="#">Platby</a></li>
       </ul>
     </li>
     <li><a class="nav__link" href="#">Jídelníček</a></li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--classes" href="#">Třídy</a> <!-- tenhle link povede na přehled tříd (viz Horolezecká) -->
       <ul class="sub-nav dn" id="sub-nav--classes">
-        <li><a href="#" class="sub-nav__link">Broučci</a></li>
-        <li><a href="#" class="sub-nav__link">Cvrček</a></li>
-        <li><a href="#" class="sub-nav__link">Krteček</a></li>
-        <li><a href="#" class="sub-nav__link">Maková panenka</a></li>
-        <li><a href="#" class="sub-nav__link">Rákosníček</a></li>
+        <li><a class="sub-nav__link" href="#">Broučci</a></li>
+        <li><a class="sub-nav__link" href="#">Cvrček</a></li>
+        <li><a class="sub-nav__link" href="#">Krteček</a></li>
+        <li><a class="sub-nav__link" href="#">Maková panenka</a></li>
+        <li><a class="sub-nav__link" href="#">Rákosníček</a></li>
       </ul>
     </li>
     <li><a class="nav__link" href="#">Kontakty</a></li>
