--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,6 @@ nav {
           box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-  font-family: "Roboto Condensed", sans-serif;
-  color: #ff9933;
-  text-align: center;
-}
-
 .news-meal {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -228,6 +222,27 @@ h2 {
   color: #ff8000;
 }
 
+.interests__events {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 2em;
+}
+
+.interests__events ul {
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.interests__events p {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
 .footer {
   background-color: #ff9933;
 }
@@ -253,5 +268,19 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
   color: #333333;
+}
+
+/* generic styles for headings */
+h1 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.5em;
+  color: #ff9933;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.3em;
+  color: #ff9933;
 }
 /*# sourceMappingURL=styles.css.map */
