--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,7 @@
         "header",
         "nav",
         "main-page",
+        "about-school",
         "footer";
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto+Condensed:wght@400;700&display=swap');
@@ -14,3 +15,19 @@ body {
   font-family: $font-text;
   color: $color-dark;
 }
+
+/* generic styles for headings */
+
+h1 {
+  font-family: $font-headings;
+  font-size: 1.5em;
+  color: $color-primary;
+  text-align: center;
+}
+
+h2 {
+  font-family: $font-headings;
+  font-size: 1.3em;
+  color: $color-primary;
+}
+
