--- a/_includes/layouts/interests.njk
+++ b/_includes/layouts/interests.njk
@@ -5,46 +5,42 @@
 
   <section class="interests">
     <h1>Zájmové zaměření školky</h1>
+    <img class="interests__image interests__image--left" src="/images/skolka-akce4.png" alt="děti pod barevným padákem">
     <p>Program je zaměřen na citlivý přístup ke každému dítěti a na jeho všestranný rozvoj. Pomocí kvalitních didaktických materiálů, pomůcek na výtvarnou, hudební, tělesnou, jazykovou, literární, matematickou, pracovní a dramatickou výchovu. Pro předškolní děti nabízíme přípravu pro vstup do základní školy a rozvíjíme grafomotoriku.</p>
     <p>Během roku se mohou děti účastnit různých kroužků, grafomotoriky (která je nutná pro vstup do ZŠ), flétny (předcházíme respiračním onemocněním), výuky anglického jazyka, výtvarné a pracovní výchovy, logopedie a pohybových her. Pokud máte zájem, v současné době probíhá saunování dětí pod vedením zkušeného lékaře Dr. Mikoláška.</p>
     <h2>Čeho se ještě účastníme?</h2>
     <p>Jsou to soutěže výtvarné, malujeme obrázky do časopisů, chystáme výlety, školy v přírodě, divadelní a cirkusová představení. V rámci ekologické výchovy pořádáme různé akce zaměřené na ochranu přírody, vztah ke zvířatům a ochraně svého zdraví.</p>
-    <h2>Zájmové kroužky</h2>
-    <ul>
-      <li>saunování</li>
-      <li>hudebně taneční kroužek</li>
-      <li>jóga</li>
-      <li>cyklistika (škola má vlastní jízdní kola a příslušenství)</li>
-      <li>keramika</li>
-      <li>výuka anglického jazyka</li>
-      <li>příprava dětí na 1.třídu ZŠ (grafomotorika)</li>
-      <li>logopedická prevence</li>
-    </ul>
-    <div class="interests__events">
-      <h2>Co pro Vás chystáme?</h2>
+    <h2>Co pro Vás chystáme?</h2>
+    <div class="interests__groups">
       <ul>
-        <li>únorový karneval plný písniček a překvapení</li>
+        <li>únorový karneval plný písniček a překvapení (pro rodiče?)</li>
         <li>narozeninové dny dětí</li>
-        <li>besídky k svátku maminek (Den matek)</li>
-        <li>oslavy MDD spojené s karnevalem</li>
+        <li>besídky ke dni matek (pro rodiče)</li>
+        <li>oslavy MDD spojené s karnevalem (pro rodiče?)</li>
         <li>školy v přírodě</li>
         <li>fotografování dětí</li>
-        <li>vánoční posezení s pohoštěním pro rodiče a ukázkou hudební a dramatické výchovy</li>
-      </ul>
-      <p>V květnu organizujeme školu v přírodě na kolech v krásné lokalitě Měřín – Slapská přehrada. V zimě jezdíme na hory do Krkonoš. Zde učíme děti sjíždět kopce na lyžích, hrajeme si na sněhu a pořádáme různé soutěže. Veškerou výstroj na lyžování má naše škola vlastní - lyže, boty, helmy i vesty.</p>
-      <h2>Akce pro rodiče</h2>
-      <ul>
-        <li>karneval</li>
-        <li>besídka ke dni matek</li>
-        <li>mikulášská besídka, vánoční besídka</li>
+        <li>vánoční posezení s ukázkou hudební a dramatické výchovy (pro rodiče)</li>
         <li>ukázky výchovné práce s dětmi (volný vstup rodičů do MŠ každý den)</li>
-        <li>ukázka práce v kroužcích</li>
+        <li>ukázka práce v kroužcích (pro rodiče)</li>
         <li>divadla pro děti, které ještě MŠ nenavštěvují</li>
       </ul>
+      <img class="interests__image interests__image--right-h" src="/images/skolka-akce2+.png" alt="akce s klauny">
+      <p>V květnu organizujeme školu v přírodě na kolech v krásné lokalitě Měřín – Slapská přehrada. V zimě jezdíme na hory do Krkonoš. Zde učíme děti sjíždět kopce na lyžích, hrajeme si na sněhu a pořádáme různé soutěže. Veškerou výstroj na lyžování má naše škola vlastní - lyže, boty, helmy i vesty.</p>
     </div>
-
-    <!-- přidat nějaké fotky -->
-
+    <h2>Zájmové kroužky</h2>
+    <div class="interests__groups">
+      <ul>
+        <li>saunování</li>
+        <li>hudebně taneční kroužek</li>
+        <li>jóga</li>
+        <li>cyklistika (škola má vlastní jízdní kola a příslušenství)</li>
+        <li>keramika</li>
+        <li>výuka anglického jazyka</li>
+        <li>příprava dětí na 1.třídu ZŠ (grafomotorika)</li>
+        <li>logopedická prevence</li>
+      </ul>
+      <img class="interests__image interests__image--right-w" src="/images/skolka-akce3.png" alt="děti na kolech">
+    </div>
   </section>
 
 </main>
