--- a/css/_about-school.scss
+++ b/css/_about-school.scss
@@ -1,14 +1,33 @@
-.interests__events {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 2em;
+.interests {
 
-  ul {
-    grid-row: 2;
+  &__image {
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+    
+    &--left {
+      width: 32%;
+      float: left;
+      margin-right: 1em;
+    }
+
+    &--right-h {
+      height: 236px;
+      margin-left: 2em;
+    }
+
+    &--right-w {
+      height: 190px;
+      margin-left: 2em;
+    }
   }
 
-  p {
-    grid-column: 1 / 3;
-    grid-row: 3;
+  &__groups {
+    display: flex;
+    flex-wrap: wrap;
+
+    ul {
+      margin: 0;
+    }
   }
+
 }
