--- a/css/_main-page.scss
+++ b/css/_main-page.scss
@@ -12,7 +12,7 @@
   float: right;
   width: 20%;
   margin-left: 1em;
-  border-radius: 4%;
+  border-radius: 4px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
