--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ nav {
   float: right;
   width: 20%;
   margin-left: 1em;
-  border-radius: 4%;
+  border-radius: 4px;
   -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
@@ -222,25 +222,38 @@ nav {
   color: #ff8000;
 }
 
-.interests__events {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 2em;
+.interests__image {
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
-.interests__events ul {
-  -ms-grid-row: 2;
-  grid-row: 2;
+.interests__image--left {
+  width: 32%;
+  float: left;
+  margin-right: 1em;
 }
 
-.interests__events p {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
-  -ms-grid-row: 3;
-  grid-row: 3;
+.interests__image--right-h {
+  height: 236px;
+  margin-left: 2em;
+}
+
+.interests__image--right-w {
+  height: 190px;
+  margin-left: 2em;
+}
+
+.interests__groups {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.interests__groups ul {
+  margin: 0;
 }
 
 .footer {
