--- a/_includes/layouts/interests.njk
+++ b/_includes/layouts/interests.njk
@@ -5,42 +5,50 @@
 
   <section class="interests">
     <h1>Zájmové zaměření školky</h1>
-    <img class="interests__image interests__image--left" src="/images/skolka-akce4.png" alt="děti pod barevným padákem">
+    <img class="interests__image interests__image--left" src="/images/skolka-akce1.png" alt="děti pod barevným padákem">
     <p>Program je zaměřen na citlivý přístup ke každému dítěti a na jeho všestranný rozvoj. Pomocí kvalitních didaktických materiálů, pomůcek na výtvarnou, hudební, tělesnou, jazykovou, literární, matematickou, pracovní a dramatickou výchovu. Pro předškolní děti nabízíme přípravu pro vstup do základní školy a rozvíjíme grafomotoriku.</p>
     <p>Během roku se mohou děti účastnit různých kroužků, grafomotoriky (která je nutná pro vstup do ZŠ), flétny (předcházíme respiračním onemocněním), výuky anglického jazyka, výtvarné a pracovní výchovy, logopedie a pohybových her. Pokud máte zájem, v současné době probíhá saunování dětí pod vedením zkušeného lékaře Dr. Mikoláška.</p>
     <h2>Čeho se ještě účastníme?</h2>
     <p>Jsou to soutěže výtvarné, malujeme obrázky do časopisů, chystáme výlety, školy v přírodě, divadelní a cirkusová představení. V rámci ekologické výchovy pořádáme různé akce zaměřené na ochranu přírody, vztah ke zvířatům a ochraně svého zdraví.</p>
     <h2>Co pro Vás chystáme?</h2>
-    <div class="interests__groups">
-      <ul>
-        <li>únorový karneval plný písniček a překvapení (pro rodiče?)</li>
-        <li>narozeninové dny dětí</li>
-        <li>besídky ke dni matek (pro rodiče)</li>
-        <li>oslavy MDD spojené s karnevalem (pro rodiče?)</li>
-        <li>školy v přírodě</li>
-        <li>fotografování dětí</li>
-        <li>vánoční posezení s ukázkou hudební a dramatické výchovy (pro rodiče)</li>
-        <li>ukázky výchovné práce s dětmi (volný vstup rodičů do MŠ každý den)</li>
-        <li>ukázka práce v kroužcích (pro rodiče)</li>
-        <li>divadla pro děti, které ještě MŠ nenavštěvují</li>
-      </ul>
-      <img class="interests__image interests__image--right-h" src="/images/skolka-akce2+.png" alt="akce s klauny">
-      <p>V květnu organizujeme školu v přírodě na kolech v krásné lokalitě Měřín – Slapská přehrada. V zimě jezdíme na hory do Krkonoš. Zde učíme děti sjíždět kopce na lyžích, hrajeme si na sněhu a pořádáme různé soutěže. Veškerou výstroj na lyžování má naše škola vlastní - lyže, boty, helmy i vesty.</p>
+    <ul>
+      <li>únorový karneval plný písniček a překvapení (pro rodiče?)</li>
+      <li>narozeninové dny dětí</li>
+      <li>besídky ke dni matek (pro rodiče)</li>
+      <li>oslavy MDD spojené s karnevalem (pro rodiče?)</li>
+      <li>školy v přírodě</li>
+      <li>fotografování dětí</li>
+      <li>vánoční posezení s ukázkou hudební a dramatické výchovy (pro rodiče)</li>
+      <li>ukázky výchovné práce s dětmi (volný vstup rodičů do MŠ každý den)</li>
+      <li>ukázka práce v kroužcích (pro rodiče)</li>
+      <li>divadla pro děti, které ještě MŠ nenavštěvují</li>
+    </ul>
+    <p>V květnu organizujeme školu v přírodě na kolech v krásné lokalitě Měřín – Slapská přehrada. V zimě jezdíme na hory do Krkonoš. Zde učíme děti sjíždět kopce na lyžích, hrajeme si na sněhu a pořádáme různé soutěže. Veškerou výstroj na lyžování má naše škola vlastní - lyže, boty, helmy i vesty.</p>
+    <div class="interests__gallery">
+      <div class="interests__gallery-item">
+        <img class="interests__image" src="/images/skolka-akce2.png" alt="děti na kolech">
+      </div>
+      <div class="interests__gallery-item">
+        <img class="interests__image" src="/images/skolka-akce3.png" alt="děti ve vířivce">
+      </div>
+      <div class="interests__gallery-item">
+        <img class="interests__image" src="/images/skolka-akce4.png" alt="děti závod trakařů">
+      </div>
+      <div class="interests__gallery-item">
+        <img class="interests__image" src="/images/skolka-akce5.png" alt="dětská akce s klauny">
+      </div>
     </div>
     <h2>Zájmové kroužky</h2>
-    <div class="interests__groups">
-      <ul>
-        <li>saunování</li>
-        <li>hudebně taneční kroužek</li>
-        <li>jóga</li>
-        <li>cyklistika (škola má vlastní jízdní kola a příslušenství)</li>
-        <li>keramika</li>
-        <li>výuka anglického jazyka</li>
-        <li>příprava dětí na 1.třídu ZŠ (grafomotorika)</li>
-        <li>logopedická prevence</li>
-      </ul>
-      <img class="interests__image interests__image--right-w" src="/images/skolka-akce3.png" alt="děti na kolech">
-    </div>
+    <ul>
+      <li>saunování</li>
+      <li>hudebně taneční kroužek</li>
+      <li>jóga</li>
+      <li>cyklistika (škola má vlastní jízdní kola a příslušenství)</li>
+      <li>keramika</li>
+      <li>výuka anglického jazyka</li>
+      <li>příprava dětí na 1.třídu ZŠ (grafomotorika)</li>
+      <li>logopedická prevence</li>
+    </ul>
   </section>
 
 </main>
