day-mode section

--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -7,9 +7,9 @@
         <li><a class="sub-nav__link" href="/o-skolce/koncepce">Koncepce školky</a></li>
         <li><a class="sub-nav__link" href="/o-skolce/zajmy">Zájmové zaměření</a></li>
         <li><a class="sub-nav__link" href="/o-skolce/vnitrek">Jak to u nás vypadá</a></li>
-        <li><a class="sub-nav__link" href="#">Režim dne</a></li>
-        <li><a class="sub-nav__link" href="#">Školní vzdělávací program</a></li>
-        <li><a class="sub-nav__link" href="#">Úřední dokumenty</a></li>
+        <li><a class="sub-nav__link" href="/o-skolce/denni-rezim">Režim dne</a></li>
+        <li><a class="sub-nav__link" href="/o-skolce/svp">Školní vzdělávací program</a></li>
+        <li><a class="sub-nav__link" href="/o-skolce/dokumenty">Úřední dokumenty</a></li>
       </ul>
     </li>
     <li class="nav__item">
