--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,20 @@ nav {
           transform: scale(1.1);
 }
 
+.day-mode__section {
+  margin-top: 2em;
+}
+
+.day-mode__table th {
+  width: 120px;
+  text-align: center;
+  vertical-align: top;
+}
+
+.day-mode__list {
+  margin-top: 0;
+}
+
 .footer {
   background-color: #ff9933;
 }
@@ -300,5 +314,12 @@ h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.3em;
   color: #ff9933;
+}
+
+h3 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.1em;
+  color: #333333;
+  margin-bottom: 0;
 }
 /*# sourceMappingURL=styles.css.map */
