--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,3 +31,10 @@ h2 {
   color: $color-primary;
 }
 
+h3 {
+  font-family: $font-headings;
+  font-size: 1.1em;
+  color: $color-dark;
+  margin-bottom: 0;
+}
+
