--- a/_includes/layouts/svp.njk
+++ b/_includes/layouts/svp.njk
@@ -4,8 +4,118 @@
 <main class="main main--about-school">
 
   <section class="svp">
-    <h1></h1>
-    
+    <h1>Školní vzdělávací program</h1>
+    <table class="svp__table">
+      <thead>
+        <tr>
+          <th></th>
+          <th scope="row">Hlavní téma</th>
+          <th scope="row">1. týden</th>
+          <th scope="row">2. týden</th>
+          <th scope="row">3. týden</th>
+          <th scope="row">4. týden</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="col">Září</th>
+          <td>Škola na nás volá</td>
+          <td>Kdo všechno přišel do školky?</td>
+          <td>Mám kamarády?</td>
+          <td>Tady jsem doma</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Říjen</th>
+          <td>Sklízíme plody podzimu</td>
+          <td>Na poli</td>
+          <td>Na zahradě</td>
+          <td>V lese</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Listopad</th>
+          <td>Když padá listí</td>
+          <td>Co umí vítr a déšť?</td>
+          <td>Moje tělo a zdraví</td>
+          <td>Když kamarád stůně</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Prosinec</th>
+          <td>Těšíme se na Ježíška</td>
+          <td>U nás doma s Mikulášem</td>
+          <td>Jdeme z pohádky do pohádky</td>
+          <td>Vánoční besídka – oslavy Vánoc</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Leden</th>
+          <td>Zimní hry a sporty</td>
+          <td>Paní zima jede</td>
+          <td>Půjdu k zápisu</td>
+          <td>Masopust</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Únor</th>
+          <td>Objevujeme svět kolem nás</td>
+          <td>Hádej, čím jsem</td>
+          <td>Co děláme celý den a celý rok?</td>
+          <td>Čím cestujeme?</td>
+          <td>Řeky a moře</td>
+        </tr>
+        <tr>
+          <th scope="col">Březen</th>
+          <td>Jak se rodí jaro</td>
+          <td>Jaro v trávě</td>
+          <td>Když jaro ťuká</td>
+          <td>Jaro na zahrádce</td>
+          <td>Svátky jara</td>
+        </tr>
+        <tr>
+          <th scope="col">Duben</th>
+          <td>Moje zvířátko – kde má domov?</td>
+          <td>Poznáváme domácí zvířata a jejich mláďata</td>
+          <td>Kdo žije u potoků, řek a rybníků?</td>
+          <td>Která zvířátka žijí ve volné přírodě</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Květen</th>
+          <td>Když všechno kvete</td>
+          <td>Máme se rádi s mámou a tátou</td>
+          <td>Naše maminka má svátek</td>
+          <td>Jak je barevná kvetoucí příroda</td>
+          <td>Opakování všech témat</td>
+        </tr>
+        <tr>
+          <th scope="col">Červen</th>
+          <td>Co už umím?</td>
+          <td>Jak oslavujeme svátek dětí?</td>
+          <td>Kniha je studnice moudrosti</td>
+          <td>Planeta Země</td>
+          <td>Hurá na prázdniny</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div>
+      <p> Projekt s názvem Šablony OP PPR pro MŠ Parmská 388, registrační číslo projektu: CZ.07.4.68/0.0/0.0/19_071/0002000 je financován z Operačního programu Praha – pól růstu ČR. Projekt rozvíjí proinkluzivní prostředí v MŠ prostřednictvím podpory dětí s odlišným mateřským jazykem a aktivit zaměřených na spolupráci s rodiči dětí. </p>
+      <img class="svp__logos" src="/images/logo-eu-praha.jpg" alt="logo EU a hlavního města Prahy">
+      <p>Ministerstvo školství, mládeže a tělovýchovy jako Řídicí orgán Operačního programu Výzkum, vývoj a vzdělávání rozhodlo o poskytnutí dotace na realizaci projektu s názvem „MŠ Parmská Šablony I“. Projekt je spolufinancován Evropskou unií a bude obsahovat tyto aktivity:</p>
+      <ul>
+        <li>Chůva – personální podpora MŠ</li>
+        <li>Osobnostně sociální rozvoj předškolních pedagogů MŠ v rozsahu 16 hodin</li>
+        <li>Vzdělávání pedagogických pracovníků MŠ – DVPP v rozsahu 16 hodin_Matematická pregramotnost</li>
+        <li>Specifika práce pedagoga s dvouletými dětmi v MŠ</li>
+        <li>Sdílení zkušeností pedagogů z různých škol prostřednictvím vzájemných návštěv (pro MŠ)</li>
+        <li>Prevence logopedických vad a problémů komunikačních schopností u dětí v MŠ</li>
+        <li>Odborně zaměřená tematická setkávání a spolupráce s rodiči dětí v MŠ</li>
+      </ul>
+      <img class="svp__logos" src="/images/logo-eu-msmt.jpg" alt="logo EU a hlavního města Prahy">
+      <p>Ministerstvo školství, mládeže a tělovýchovy jako Řídicí orgán Operačního programu Výzkum, vývoj a vzdělávání v rámci Výzvy – Podpora škol formou projektů zjednodušeného vykazování – Šablony pro MŠ a ZŠ I, v souladu s ustanovením § 14 odst. 4 zákona č. 218/2000 Sb., o rozpočtových pravidlech a o změně některých souvisejících zákonů, ve znění pozdějších předpisů, rozhodlo o poskytnutí dotace pro naši školu na projekt s názvem „MŠ Parmská Šablony I“,  registrační číslo „CZ.02.3.68/0.0/0.0/16_023/0006350“. Dotace je čerpána od 1. 4. 2017 na provoz námi zvolených aktivit v rámci ZP.</p>
+    </div>
   </section>
 
 </main>
