--- a/_includes/layouts/documents.njk
+++ b/_includes/layouts/documents.njk
@@ -4,7 +4,170 @@
 <main class="main main--about-school">
 
   <section class="documents">
-    
+    <h1 class="documents__heading">Úřední dokumenty</h1>
+
+    {{ content | safe }}
+
+    <section class="documents__info">
+      <h2>Povinně zveřejňované informace</h2>
+      <ol class="documents__info--list">
+        <li>
+          <span class="documents__info--list-heading">Název</span>
+          <p>Mateřská škola, Praha 10, Parmská 388</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Důvod a způsob založení</span>
+          <p>Mateřská škola vznikla schválením zřizovací listiny mateřské školy s účinností od 1. 1. 2006 podle §89 odst. 1 písm. k) zákona č. 131/2000 Sb., o hlavním městě Praze, v platném znění, §179 odst. 1 písm. a) zákona561/2004 Sb. o předškolním, základním, středním, vyšším odborném a jiném vzdělávání (dále jen školský zákon), v platném znění, § 27 zákona č. 250/2000 Sb., o rozpočtových pravidlech územních rozpočtů, ve znění pozdějších předpisů.</p>
+          <p>Účelem mateřské školy je pečovat o všestranný rozvoj osobnosti dětí v rozsahu, který pro mateřské školy vyplývá z § 33 a § 3, 4, 5 zákona č. 561/2004 Sb. (školský zákon)</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Organizační struktura</span>
+          <p>Mateřská škola je pavilónového typu, disponuje pěti třídami pro 140 dětí. Škola má vlastní školní kuchyň, využívá vlastní zahradu.</p>
+          <p>Provoz mateřské školy je od 6.30 – 17.00 hod.</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Kontaktní spojení</span>
+          <p>Mateřská škola, Praha 10, Parmská 388 <br />
+            Parmská 388 <br />
+            109 00 Praha 10 </p>
+          <p>Tel.: 274865950</p>
+          <p>E-mail: msparmska@seznam.cz</p>
+          <ol>
+            <li>
+              <span class="documents__info--list-heading">Kontaktní poštovní adresa</span>
+              <p>Mateřská škola, Praha 10, Parmská 388 <br />
+                Parmská 388 <br />
+                109 00 Praha 10 </p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Adresa pro osobní návštěvu</span>
+              <p>Mateřská škola, Praha 10, Parmská 388 <br />
+                Parmská 388 <br />
+                109 00 Praha 10 </p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Úřední hodiny</span>
+              <p>Pondělí 8.00 – 14.00 hod.</p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Telefonní čísla</span>
+              <p>hospodářka a ředitelka školy: 274865950</p>
+              <p>školní jídelna: 274865950</p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Adresa internetové stránky</span>
+              <p><a href="https://www.msparmska.cz/">www.msparmska.cz</a></p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Datová schránka</span>
+              <p>ID datové schránky: <strong>dfnukuv</strong></p>
+            </li>
+          </ol>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Případné platby lze poukázat na účet</span>
+          <p>Číslo účtu: 2000891359/0800</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">IČO</span>
+          <p>IČO: 47610182</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Dokumenty</span>
+          <ol>
+            <li>
+              <span class="documents__info--list-heading">Seznam hlavních dokumentů</span>
+              <p><a href="/docs/zrizovaci-listina.pdf" target="_blank">Zřizovací listina</a></p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Rozpočet</span>
+              <p>viz  <a href="#budget">Rozpočty</a> výše</p>
+            </li>
+          </ol>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Žádosti o informace</span>
+          <p>Získat informace, podávat žádosti, stížnosti, návrhy, podněty atd., lze písemně nebo elektronicky skrz datovou schránku.</p>
+          <p>Přehled žádostí za rok 2020</p>
+          <table>
+            <tr>
+              <td>1.</td>
+              <td><a href="/docs/zadost-o-poskytnuti-informaci-kamerovy-system.pdf" target="_blank">Žádost o poskytnutí informací ke kamerovému systému</a></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Příjem žádostí a dalších podání</span>
+          <p>viz bod 8.</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Opravné prostředky</span>
+          <p>Opravný prostředek proti rozhodnutí Mateřské školy lze podat pouze písemně na adresu:</p>
+          <p>Mateřská škola, Praha 10, Parmská 388 <br />
+            Parmská 388 <br />
+            109 00 Praha 10 </p>
+          <p>nebo datovou schránkou.</p>
+          <p>V odvolání musí být uvedeno jméno a adresa žadatele, jednací číslo rozhodnutí a proti čemu se žadatel odvolává.</p>
+          <p>Lhůta pro podání opravného prostředku je uvedena v poučení příslušného rozhodnutí.</p>
+          <p>Proti rozhodnutí povinného subjektu o odmítnutí žádosti podle zákona č. 106/1999 Sb. lze podat odvolání ve lhůtě 15 dnů od doručení tohoto rozhodnutí.</p>
+          <p>Speciální formulář pro podání opravného prostředku není vydán.</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Název příslušného formuláře a způsob a místo, kde lze takový formulář získat</span>
+          <p>Speciální formuláře nejsou organizací předepsány.</p>
+          <p>Formuláře najdete např. na webu Portál veřejné správy.</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Popisy postupů – návody pro řešení životních situací</span>
+          <p>Popisy postupů publikuje Portál veřejné správy.</p>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Předpisy</span>
+          <ol>
+            <li>
+              <span class="documents__info--list-heading">Nejdůležitější používané předpisy</span>
+              <p>Zákon č. 561/2004Sb., o předškolním, základním, středním, vyšším odborném a jiném vzdělávání (školský zákon)</p>
+              <p>Vyhláška č. 16/2005 Sb., o organizaci školního roku</p>
+              <p>Vyhláška č. 64/2005 Sb., o evidenci úrazů dětí, žáků a studentů</p>
+              <p>Vyhláška č. 73/2005 Sb., o vzdělávání dětí, žáků a studentů se speciálními vzdělávacími potřebami a dětí, žáků a studentů mimořádně nadaných, ve znění pozdějších předpisů</p>
+              <p>Vyhláška č. 274/2009 Sb., o školských zařízeních</p>
+              <p>Vyhláška č. 364/2005 Sb., o vedení dokumentace škol a školských zařízení a školní matriky a o předávání údajů z dokumentace škol a školských zařízení a ze školní matriky (vyhláška o dokumentaci škol a školských zařízení)</p>
+              <p>Zákon č. 262/2006 Sb., zákoník práce, ve znění pozdějších předpisů</p>
+              <p>Nařízení vlády č. 222/2010 Sb., o katalogu prací ve veřejných službách a správě</p>
+              <p>Zákon č. 563/2004 Sb., o pedagogických pracovnících a o změně některých zákonů</p>
+              
+              <p>Znění právních předpisů naleznete na Portálu veřejné správy dále také ve Sbírce zákonů a Sbírce mezinárodních smluv vedených MVČR a právo EU je k dispozici ve službě EUR-Lex.</p>
+            </li>
+          </ol>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Úhrady za poskytování informací</span>
+          <ol>
+            <li>
+              <span class="documents__info--list-heading">Sazebník úhrad za poskytování informací</span>
+              <p>Využíván ceník zřizovatele – Městská část Praha 15.</p>
+            </li>
+            <li>
+              <span class="documents__info--list-heading">Usnesení nadřízeného orgánu o výši úhrad za poskytnutí informací</span>
+              <p>Aktuální ceník naleznete na webových stránkách zřizovatele.</p>
+            </li>
+          </ol>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Licenční smlouvy</span>
+        </li>
+        <li>
+          <span class="documents__info--list-heading">Výroční zprávy</span>
+          <p><a href="/docs/vyrocni-zprava-informace-2019.pdf" target="_blank">2019 Výroční zpráva podle 106 (PDF)</a></p>
+          <p><a href="/docs/vyrocni-zprava-informace-2020.pdf" target="_blank">2020 Výroční zpráva podle 106 (PDF)</a></p>
+        </li>
+      </ol>
+    </section>
+
   </section>
 
 </main>
