--- a/css/_about-school.scss
+++ b/css/_about-school.scss
@@ -109,3 +109,72 @@
 }
 
 /* nejsou ty barvy moc bláznivé? */
+
+.documents {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, auto);
+
+  &__heading {
+    grid-column: 1 / 3;
+  }
+
+  &__reports {
+    grid-column: 1 / 2;
+  }
+
+  &__gdpr {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  a {
+    color: $color-primary;
+
+    &:hover {
+      color: $color-primary-dark;
+    }
+  }
+
+  &__info {
+    grid-column: 1 / 3;
+    margin-top: 1em;
+    
+    ol {
+      list-style-type: none;
+      counter-reset: docinfo;
+    }
+
+    &--list {
+      padding: 0;
+    }
+
+    li {
+      margin: 1em 0;
+    }
+
+    li::before {
+      counter-increment: docinfo;
+      content: counters(docinfo, ".") ". ";
+      font-family: $font-headings;
+      font-size: 1.1em;
+      font-weight: 700;
+      color: $color-dark;
+    }
+
+    &--list-heading {
+      font-family: $font-headings;
+      font-size: 1.1em;
+      font-weight: 700;
+      color: $color-dark;
+    }
+
+    table,
+    td {
+      border: 1px solid $color-dark;
+      border-collapse: collapse;
+      padding: 0.5em;
+      height: 40px;
+    }
+  }
+}
