--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,88 @@ nav {
 }
 
 /* nejsou ty barvy moc bláznivé? */
+.documents {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+}
+
+.documents__heading {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+}
+
+.documents__reports {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.documents__gdpr {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+}
+
+.documents a {
+  color: #ff9933;
+}
+
+.documents a:hover {
+  color: #ff8000;
+}
+
+.documents__info {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  margin-top: 1em;
+}
+
+.documents__info ol {
+  list-style-type: none;
+  counter-reset: docinfo;
+}
+
+.documents__info--list {
+  padding: 0;
+}
+
+.documents__info li {
+  margin: 1em 0;
+}
+
+.documents__info li::before {
+  counter-increment: docinfo;
+  content: counters(docinfo, ".") ". ";
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.1em;
+  font-weight: 700;
+  color: #333333;
+}
+
+.documents__info--list-heading {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.1em;
+  font-weight: 700;
+  color: #333333;
+}
+
+.documents__info table,
+.documents__info td {
+  border: 1px solid #333333;
+  border-collapse: collapse;
+  padding: 0.5em;
+  height: 40px;
+}
+
 .footer {
   background-color: #ff9933;
 }
